# Changelog

## 1.0.1

- Try to deal with possible lack of `document` in server-side React.

## 1.0.0

- Initial release.