@@ -1,4 +1,8 @@
 {
+  "extends": "eslint:recommended",
+  "plugins": [
+    "react"
+  ],
   "env": {
     "node": true,
     "browser": true
