@@ -9,7 +9,7 @@
     "demo-bs": "browser-sync start --server demo --files=\"demo/**/*.css,demo/index.html,demo/demo-bundle.js\"",
     "demo-dev": "parallelshell \"npm run demo-watch\" \"npm run demo-bs\"",
     "lint": "eslint .",
-    "test-dev": "zuul --local 8080 -- test/index.js",
+    "test-dev": "zuul --local 8080 --open -- test/index.js",
     "pretest": "npm run lint",
     "test": "zuul -- test/index.js"
   },
@@ -28,17 +28,20 @@
   },
   "homepage": "https://github.com/davidtheclark/react-displace#readme",
   "devDependencies": {
-    "babelify": "6.2.0",
-    "browser-sync": "2.8.2",
-    "browserify": "11.0.1",
-    "eslint": "1.2.1",
+    "babelify": "6.3.0",
+    "browser-sync": "2.9.11",
+    "browserify": "11.2.0",
+    "eslint": "1.7.1",
+    "eslint-plugin-react": "3.5.1",
     "parallelshell": "2.0.0",
-    "tape": "4.2.0",
-    "watchify": "3.3.1",
-    "zuul": "3.4.0"
+    "react-addons-test-utils": "0.14.0",
+    "tape": "4.2.1",
+    "watchify": "3.4.0",
+    "zuul": "3.6.0"
   },
   "dependencies": {
-    "react": "0.13.x"
+    "react": "0.14.x",
+    "react-dom": "0.14.x"
   },
   "files": [
     "index.js"
