@@ -1,8 +1,8 @@
-var React = require('react/addons');
+var React = require('react');
+var ReactDOM = require('react-dom');
+var TestUtils = require('react-addons-test-utils');
 var displace = require('..');
 var test = require('tape');
-
-var TestUtils = React.addons.TestUtils;
 
 var mainContainer = document.createElement('div');
 document.body.appendChild(mainContainer);
@@ -51,13 +51,12 @@ function mountTestElement() {
     },
   });
 
-  var elementParentElement = React.render(<ElementParent />, mainContainer);
-  var appendedToBodyElement = TestUtils.findRenderedComponentWithType(elementParentElement, AppendedToBody);
+  ReactDOM.render(<ElementParent />, mainContainer);
   return document.getElementById('appended-to-body');
 }
 
 function unmountTestElement() {
-  React.unmountComponentAtNode(mainContainer);
+  ReactDOM.unmountComponentAtNode(mainContainer);
 }
 
 test('appended-to-body displaced element appended to body', function(t) {
@@ -93,7 +92,7 @@ test('appended-to-body displaced element unmounts when parent unmounts', functio
 });
 
 test('appended-to-body displaced element unmounts and mounts via `mounted` prop', function(t) {
-  var displacedNode = mountTestElement();
+  mountTestElement();
   t.ok(document.getElementById('appended-to-body'));
   t.equal(document.getElementById('appended-to-body').parentNode.parentNode, document.body);
 
